11591 usbser: cast between incompatible function types Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>